// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should process simple alert 1`] = `
Array [
  Object {
    "blocks": Array [
      Object {
        "text": Object {
          "text": "<@U100500>",
          "type": "mrkdwn",
        },
        "type": "section",
      },
      Object {
        "elements": Array [
          Object {
            "elements": Array [
              Object {
                "text": "this is summary",
                "type": "text",
              },
            ],
            "type": "rich_text_section",
          },
          Object {
            "elements": Array [
              Object {
                "text": "this is description",
                "type": "text",
              },
            ],
            "type": "rich_text_section",
          },
        ],
        "type": "rich_text",
      },
    ],
    "text": "",
  },
]
`;

exports[`should process realistic alert 1`] = `
Array [
  Object {
    "blocks": Array [
      Object {
        "text": Object {
          "text": "<@U100500>",
          "type": "mrkdwn",
        },
        "type": "section",
      },
      Object {
        "elements": Array [
          Object {
            "elements": Array [
              Object {
                "text": "📥 1 ",
                "type": "text",
              },
              Object {
                "text": "Operators did not miss block proposal in the last finalized epoch.",
                "type": "text",
              },
            ],
            "type": "rich_text_section",
          },
          Object {
            "elements": Array [
              Object {
                "text": "Number of recovered validators per operator.",
                "type": "text",
              },
            ],
            "type": "rich_text_section",
          },
        ],
        "type": "rich_text",
      },
      Object {
        "rows": Array [
          Array [
            Object {
              "text": "1",
              "type": "raw_text",
            },
            Object {
              "elements": Array [
                Object {
                  "elements": Array [
                    Object {
                      "text": "Best operator",
                      "type": "text",
                    },
                  ],
                  "type": "rich_text_section",
                },
              ],
              "type": "rich_text",
            },
            Object {
              "elements": Array [
                Object {
                  "elements": Array [
                    Object {
                      "text": "1",
                      "type": "link",
                      "url": "https://grafana.com",
                    },
                    Object {
                      "text": "|",
                      "type": "text",
                    },
                    Object {
                      "text": "Some other link",
                      "type": "link",
                      "url": "https://example.com",
                    },
                  ],
                  "type": "rich_text_section",
                },
              ],
              "type": "rich_text",
            },
          ],
        ],
        "type": "table",
      },
      Object {
        "elements": Array [
          Object {
            "alt_text": "footer icon",
            "image_url": "https://cryptologos.cc/logos/steth-steth-logo.png",
            "type": "image",
          },
          Object {
            "text": "Epoch • 120200202",
            "type": "mrkdwn",
          },
        ],
        "type": "context",
      },
    ],
    "text": "",
  },
]
`;